Upgrade example SeuratObject

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,4 +39,5 @@ VignetteBuilder: knitr
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 RdMacros: Rdpack
-RoxygenNote: 7.2.2
+RoxygenNote: 7.3.2
+LazyData: true
